--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jss": "^10.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
