--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0",
+    "react-portal": "^4.2.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
